Changelog
=========

0.9.6 - Unreleased
------------------

* Fix ignored integer range criteria (reported by SimO)
* Use a browser layer (suggested by optilude)
* Add ids and CSS classes to the batch_macro sort links (aaronv)
* Fix a bug with the "operator" field.  Thanks to Mauro!

0.9.5 - 2009-03-06
------------------

* Move package to src directory and fix testing buildout
* Register criteria AT types using the right package name
* Fix a bug with the JavaScript that narrows the criteria types by
  index/field
* Use separate meta_types instead of overwriting the ATCT meta types,
  may be backwards incompatible for previous installations

0.9.4 - 2009-02-08
------------------

* Add a layout that lists items grouped by the sort used
* Fix KeyError: u'unsorted' bug for existing ATTopics as reported by
  jonstahl

0.9.3 - 2009-01-31
------------------

* Fix widget JavaScript and CSS for search form portlet

0.9.2 - 2009-01-31
------------------

* Clarify selected sort
* Make portlet usable outside the context of the collection
* Fix portlet class
* Don't render hour and minute fields on date 

0.9.1 - 2009-01-30
------------------

* Move the search form viewlet into a portlet
* Patch the ATCT addCrierion method to properly initialize criteria so
  that they can safely be created in code
* Use the same mismatched meta_type ATCT for the
  FormDateCriterion

0.9 - 2009-01-29
----------------

* Fix incompatibility when extended sort criterion were added to
  existing ATCT ATTopic instances

0.8 - 2009-01-29
----------------

* Added multiple sort links to the batch macro

0.7 - 2009-01-28
----------------

* Change to use the same names as ATCT where appropriate to avoid some
  problems where the ATCT names are expected.
* Flesh out the GenericSetup profile with all other bits in the Plone
  profile that make reference to criteria.

0.6 - 2009-01-26
----------------

* Use a form prefix for the search form.  Fixes calendar JavaScript
  bug.